# win-honeypot

./: CMakeLists.txt  LICENSE  README.md  main.cpp
_http/src/: http_honeypot.cpp  http_honeypot.h  http_log.cpp  http_log.h  login.html
_ssh/src/: ssh_honeypot.cpp  ssh_honeypot.h  ssh_log.cpp  ssh_log.h
config/: config.json
